News UAT/force-app/main/default/objects/Contact__x/Contact__x.object-meta.xml
<CustomObject>
    <externalDataSource>ARMuat</externalDataSource>
    <externalName>Contact</externalName>
    <label>NRM Contact</label>
    <pluralLabel>NRM Contacts</pluralLabel>
</CustomObject>