News UAT/force-app/main/default/objects/Contact__x/fields/Account_Industry_Code_c__c.field-meta.xml
<CustomField>
    <fullName>Account_Industry_Code_c__c</fullName>
    <externalDeveloperName>Account_Industry_Code__c</externalDeveloperName>
    <label>Account Industry Code</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>