News UAT/force-app/main/default/objects/Contact__x/fields/AccountId__c.field-meta.xml
<CustomField>
    <fullName>AccountId__c</fullName>
    <externalDeveloperName>AccountId</externalDeveloperName>
    <label>Company Name</label>
    <length>18</length>
    <referenceTo>Account__x</referenceTo>
    <relationshipLabel>NRM Contacts</relationshipLabel>
    <relationshipName>NRM_Contacts</relationshipName>
    <type>ExternalLookup</type>
</CustomField>