News UAT/force-app/main/default/objects/Contact__x/fields/AccountNumber_c__c.field-meta.xml
<CustomField>
    <fullName>AccountNumber_c__c</fullName>
    <externalDeveloperName>AccountNumber__c</externalDeveloperName>
    <label>AccountNumber</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>