News UAT/force-app/main/default/objects/Contact__x/fields/Advertising_Decision_c__c.field-meta.xml
<CustomField>
    <fullName>Advertising_Decision_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>Advertising_Decision__c</externalDeveloperName>
    <label>Decision Maker</label>
    <type>Checkbox</type>
</CustomField>