News UAT/force-app/main/default/objects/Contact__x/fields/AssistantName__c.field-meta.xml
<CustomField>
    <fullName>AssistantName__c</fullName>
    <externalDeveloperName>AssistantName</externalDeveloperName>
    <label>Assistant&#39;s Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>