News UAT/force-app/main/default/objects/Contact__x/fields/Birthdate__c.field-meta.xml
<CustomField>
    <fullName>Birthdate__c</fullName>
    <externalDeveloperName>Birthdate</externalDeveloperName>
    <label>Birthdate</label>
    <type>Date</type>
</CustomField>