News UAT/force-app/main/default/objects/Contact__x/fields/Campaign_Contact_c__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Contact_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>Campaign_Contact__c</externalDeveloperName>
    <label>Campaign Contact</label>
    <type>Checkbox</type>
</CustomField>