News UAT/force-app/main/default/objects/Contact__x/fields/Company_Active_c__c.field-meta.xml
<CustomField>
    <fullName>Company_Active_c__c</fullName>
    <externalDeveloperName>Company_Active__c</externalDeveloperName>
    <label>Company Active</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>