News UAT/force-app/main/default/objects/Contact__x/fields/Company_Owner_ID_c__c.field-meta.xml
<CustomField>
    <fullName>Company_Owner_ID_c__c</fullName>
    <externalDeveloperName>Company_Owner_ID__c</externalDeveloperName>
    <label>Company Owner ID</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>