News UAT/force-app/main/default/objects/Contact__x/fields/Company_Record_Type_c__c.field-meta.xml
<CustomField>
    <fullName>Company_Record_Type_c__c</fullName>
    <externalDeveloperName>Company_Record_Type__c</externalDeveloperName>
    <label>Company Record Type</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>