News UAT/force-app/main/default/objects/Contact__x/fields/Contact_External_ID_c__c.field-meta.xml
<CustomField>
    <fullName>Contact_External_ID_c__c</fullName>
    <externalDeveloperName>Contact_External_ID__c</externalDeveloperName>
    <label>Contact External ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>