News UAT/force-app/main/default/objects/Contact__x/fields/Contact_ID_c__c.field-meta.xml
<CustomField>
    <fullName>Contact_ID_c__c</fullName>
    <externalDeveloperName>Contact_ID__c</externalDeveloperName>
    <label>Contact ID</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>