News UAT/force-app/main/default/objects/Contact__x/fields/Contact_Preferences_c__c.field-meta.xml
<CustomField>
    <fullName>Contact_Preferences_c__c</fullName>
    <externalDeveloperName>Contact_Preferences__c</externalDeveloperName>
    <label>Contact Preferences</label>
    <type>TextArea</type>
</CustomField>