News UAT/force-app/main/default/objects/Contact__x/fields/Contact_Status_c__c.field-meta.xml
<CustomField>
    <fullName>Contact_Status_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>Contact_Status__c</externalDeveloperName>
    <label>Contact Status</label>
    <type>Checkbox</type>
</CustomField>