News UAT/force-app/main/default/objects/Contact__x/fields/Contact_Type_c__c.field-meta.xml
<CustomField>
    <fullName>Contact_Type_c__c</fullName>
    <externalDeveloperName>Contact_Type__c</externalDeveloperName>
    <label>Contact Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Key Contact</fullName>
            </value>
            <value>
                <fullName>Delegate</fullName>
            </value>
            <value>
                <fullName>Principal</fullName>
            </value>
            <value>
                <fullName>Materials Contact</fullName>
            </value>
            <value>
                <fullName>Accounts Contact</fullName>
            </value>
            <value>
                <fullName>Copy Approval</fullName>
            </value>
            <value>
                <fullName>DMS Contact</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>