News UAT/force-app/main/default/objects/Contact__x/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <externalDeveloperName>Department</externalDeveloperName>
    <label>Department</label>
    <length>80</length>
    <type>Text</type>
</CustomField>