News UAT/force-app/main/default/objects/Contact__x/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <externalDeveloperName>Description</externalDeveloperName>
    <label>Background Information</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>