News UAT/force-app/main/default/objects/Contact__x/fields/Direct_Dial_c__c.field-meta.xml
<CustomField>
    <fullName>Direct_Dial_c__c</fullName>
    <externalDeveloperName>Direct_Dial__c</externalDeveloperName>
    <label>Direct Dial</label>
    <type>Phone</type>
</CustomField>