News UAT/force-app/main/default/objects/Contact__x/fields/Direct_Dial_Search_Purposes_Only_c__c.field-meta.xml
<CustomField>
    <fullName>Direct_Dial_Search_Purposes_Only_c__c</fullName>
    <externalDeveloperName>Direct_Dial_Search_Purposes_Only__c</externalDeveloperName>
    <label>Direct Dial (Search Purposes Only)</label>
    <length>25</length>
    <type>Text</type>
</CustomField>