News UAT/force-app/main/default/objects/Contact__x/fields/DMS_Email_Opt_In_c__c.field-meta.xml
<CustomField>
    <fullName>DMS_Email_Opt_In_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>DMS_Email_Opt_In__c</externalDeveloperName>
    <label>DMS Email Opt In</label>
    <type>Checkbox</type>
</CustomField>