News UAT/force-app/main/default/objects/Contact__x/fields/Do_Email_c__c.field-meta.xml
<CustomField>
    <fullName>Do_Email_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>Do_Email__c</externalDeveloperName>
    <label>Email Regarding</label>
    <type>Checkbox</type>
</CustomField>