News UAT/force-app/main/default/objects/Contact__x/fields/Do_Not_Email_c__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Email_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>Do_Not_Email__c</externalDeveloperName>
    <label>Do Not Email</label>
    <type>Checkbox</type>
</CustomField>