News UAT/force-app/main/default/objects/Contact__x/fields/EmailBouncedReason__c.field-meta.xml
<CustomField>
    <fullName>EmailBouncedReason__c</fullName>
    <externalDeveloperName>EmailBouncedReason</externalDeveloperName>
    <label>Email Bounced Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>