News UAT/force-app/main/default/objects/Contact__x/fields/FirstName__c.field-meta.xml
<CustomField>
    <fullName>FirstName__c</fullName>
    <externalDeveloperName>FirstName</externalDeveloperName>
    <label>First Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>