News UAT/force-app/main/default/objects/Contact__x/fields/HasOptedOutOfEmail__c.field-meta.xml
<CustomField>
    <fullName>HasOptedOutOfEmail__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>HasOptedOutOfEmail</externalDeveloperName>
    <label>Email Opt Out</label>
    <type>Checkbox</type>
</CustomField>