News UAT/force-app/main/default/objects/Contact__x/fields/HomePhone__c.field-meta.xml
<CustomField>
    <fullName>HomePhone__c</fullName>
    <externalDeveloperName>HomePhone</externalDeveloperName>
    <label>After Hours Phone</label>
    <type>Phone</type>
</CustomField>