News UAT/force-app/main/default/objects/Contact__x/fields/JigsawContactId__c.field-meta.xml
<CustomField>
    <fullName>JigsawContactId__c</fullName>
    <externalDeveloperName>JigsawContactId</externalDeveloperName>
    <label>Jigsaw Contact ID</label>
    <length>20</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Text</type>
</CustomField>