News UAT/force-app/main/default/objects/Contact__x/fields/Job_Title_c__c.field-meta.xml
<CustomField>
    <fullName>Job_Title_c__c</fullName>
    <externalDeveloperName>Job_Title__c</externalDeveloperName>
    <label>Job Title</label>
    <type>TextArea</type>
</CustomField>