News UAT/force-app/main/default/objects/Contact__x/fields/Key_Date_3_c__c.field-meta.xml
<CustomField>
    <fullName>Key_Date_3_c__c</fullName>
    <externalDeveloperName>Key_Date_3__c</externalDeveloperName>
    <label>Key Date 3</label>
    <type>Date</type>
</CustomField>