News UAT/force-app/main/default/objects/Contact__x/fields/Key_Date_Reason_3_c__c.field-meta.xml
<CustomField>
    <fullName>Key_Date_Reason_3_c__c</fullName>
    <externalDeveloperName>Key_Date_Reason_3__c</externalDeveloperName>
    <label>Key Date Reason 3</label>
    <length>30</length>
    <type>Text</type>
</CustomField>