News UAT/force-app/main/default/objects/Contact__x/fields/LeadSource__c.field-meta.xml
<CustomField>
    <fullName>LeadSource__c</fullName>
    <externalDeveloperName>LeadSource</externalDeveloperName>
    <label>Lead Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Advertised in other competitor</fullName>
            </value>
            <value>
                <fullName>Advertised in press competitor</fullName>
            </value>
            <value>
                <fullName>Advertised in radio competitor</fullName>
            </value>
            <value>
                <fullName>Advertised in TV competitor</fullName>
            </value>
            <value>
                <fullName>Classified Private</fullName>
            </value>
            <value>
                <fullName>Contact centre referral</fullName>
            </value>
            <value>
                <fullName>Editorial referral</fullName>
            </value>
            <value>
                <fullName>Existing Businesses</fullName>
            </value>
            <value>
                <fullName>Features referral</fullName>
            </value>
            <value>
                <fullName>Free market or local council reports</fullName>
            </value>
            <value>
                <fullName>Incoming Call</fullName>
            </value>
            <value>
                <fullName>Lapsed Account Database</fullName>
            </value>
            <value>
                <fullName>Lapsed Accounts</fullName>
            </value>
            <value>
                <fullName>Local Mail Drop</fullName>
            </value>
            <value>
                <fullName>Marketing referral</fullName>
            </value>
            <value>
                <fullName>Networking</fullName>
            </value>
            <value>
                <fullName>NS Cancellations</fullName>
            </value>
            <value>
                <fullName>NS Community Advertisers</fullName>
            </value>
            <value>
                <fullName>NS Competitions</fullName>
            </value>
            <value>
                <fullName>NS Health Checks</fullName>
            </value>
            <value>
                <fullName>NS Part-week subscribers</fullName>
            </value>
            <value>
                <fullName>NS Past Dues</fullName>
            </value>
            <value>
                <fullName>NS-resolicitation</fullName>
            </value>
            <value>
                <fullName>Proactive</fullName>
            </value>
            <value>
                <fullName>Referral from existing customer</fullName>
            </value>
            <value>
                <fullName>Tender</fullName>
            </value>
            <value>
                <fullName>Trade Show</fullName>
            </value>
            <value>
                <fullName>Word of Mouth</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>