News UAT/force-app/main/default/objects/Contact__x/fields/Left_Business_c__c.field-meta.xml
<CustomField>
    <fullName>Left_Business_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>Left_Business__c</externalDeveloperName>
    <label>Left Business</label>
    <type>Checkbox</type>
</CustomField>