News UAT/force-app/main/default/objects/Contact__x/fields/LID_LinkedIn_Member_Token_c__c.field-meta.xml
<CustomField>
    <fullName>LID_LinkedIn_Member_Token_c__c</fullName>
    <externalDeveloperName>LID__LinkedIn_Member_Token__c</externalDeveloperName>
    <label>LinkedIn Member Token</label>
    <length>80</length>
    <type>Text</type>
</CustomField>