News UAT/force-app/main/default/objects/Contact__x/fields/MailingAddress__c.field-meta.xml
<CustomField>
    <fullName>MailingAddress__c</fullName>
    <externalDeveloperName>MailingAddress</externalDeveloperName>
    <label>Mailing Address</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>TextArea</type>
</CustomField>