News UAT/force-app/main/default/objects/Contact__x/fields/MailingCity__c.field-meta.xml
<CustomField>
    <fullName>MailingCity__c</fullName>
    <externalDeveloperName>MailingCity</externalDeveloperName>
    <label>Mailing City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>