News UAT/force-app/main/default/objects/Contact__x/fields/MailingCountry__c.field-meta.xml
<CustomField>
    <fullName>MailingCountry__c</fullName>
    <externalDeveloperName>MailingCountry</externalDeveloperName>
    <label>Mailing Country</label>
    <length>80</length>
    <type>Text</type>
</CustomField>