News UAT/force-app/main/default/objects/Contact__x/fields/MailingLatitude__c.field-meta.xml
<CustomField>
    <fullName>MailingLatitude__c</fullName>
    <externalDeveloperName>MailingLatitude</externalDeveloperName>
    <label>Mailing Latitude</label>
    <precision>18</precision>
    <scale>15</scale>
    <type>Number</type>
</CustomField>