News UAT/force-app/main/default/objects/Contact__x/fields/MailingLongitude__c.field-meta.xml
<CustomField>
    <fullName>MailingLongitude__c</fullName>
    <externalDeveloperName>MailingLongitude</externalDeveloperName>
    <label>Mailing Longitude</label>
    <precision>18</precision>
    <scale>15</scale>
    <type>Number</type>
</CustomField>