News UAT/force-app/main/default/objects/Contact__x/fields/MailingState__c.field-meta.xml
<CustomField>
    <fullName>MailingState__c</fullName>
    <externalDeveloperName>MailingState</externalDeveloperName>
    <label>Mailing State</label>
    <length>80</length>
    <type>Text</type>
</CustomField>