News UAT/force-app/main/default/objects/Contact__x/fields/MobilePhone__c.field-meta.xml
<CustomField>
    <fullName>MobilePhone__c</fullName>
    <externalDeveloperName>MobilePhone</externalDeveloperName>
    <label>Mobile Phone</label>
    <type>Phone</type>
</CustomField>