News UAT/force-app/main/default/objects/Contact__x/fields/Office_c__c.field-meta.xml
<CustomField>
    <fullName>Office_c__c</fullName>
    <externalDeveloperName>Office__c</externalDeveloperName>
    <label>Office</label>
    <length>255</length>
    <type>Text</type>
</CustomField>