News UAT/force-app/main/default/objects/Contact__x/fields/office_v_business_c__c.field-meta.xml
<CustomField>
    <fullName>office_v_business_c__c</fullName>
    <externalDeveloperName>office_v_business__c</externalDeveloperName>
    <label>office v business</label>
    <precision>18</precision>
    <readOnlyProxy>true</readOnlyProxy>
    <scale>0</scale>
    <type>Number</type>
</CustomField>