News UAT/force-app/main/default/objects/Contact__x/fields/OtherAddress__c.field-meta.xml
<CustomField>
    <fullName>OtherAddress__c</fullName>
    <externalDeveloperName>OtherAddress</externalDeveloperName>
    <label>Address</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>TextArea</type>
</CustomField>