News UAT/force-app/main/default/objects/Contact__x/fields/OtherCity__c.field-meta.xml
<CustomField>
    <fullName>OtherCity__c</fullName>
    <externalDeveloperName>OtherCity</externalDeveloperName>
    <label>City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>