News UAT/force-app/main/default/objects/Contact__x/fields/OtherLatitude__c.field-meta.xml
<CustomField>
    <fullName>OtherLatitude__c</fullName>
    <externalDeveloperName>OtherLatitude</externalDeveloperName>
    <label>Other Latitude</label>
    <precision>18</precision>
    <scale>15</scale>
    <type>Number</type>
</CustomField>