News UAT/force-app/main/default/objects/Contact__x/fields/OtherLongitude__c.field-meta.xml
<CustomField>
    <fullName>OtherLongitude__c</fullName>
    <externalDeveloperName>OtherLongitude</externalDeveloperName>
    <label>Other Longitude</label>
    <precision>18</precision>
    <scale>15</scale>
    <type>Number</type>
</CustomField>