News UAT/force-app/main/default/objects/Contact__x/fields/OtherPhone__c.field-meta.xml
<CustomField>
    <fullName>OtherPhone__c</fullName>
    <externalDeveloperName>OtherPhone</externalDeveloperName>
    <label>Other Phone</label>
    <type>Phone</type>
</CustomField>