News UAT/force-app/main/default/objects/Contact__x/fields/OtherPostalCode__c.field-meta.xml
<CustomField>
    <fullName>OtherPostalCode__c</fullName>
    <externalDeveloperName>OtherPostalCode</externalDeveloperName>
    <label>Postal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>