News UAT/force-app/main/default/objects/Contact__x/fields/OtherState__c.field-meta.xml
<CustomField>
    <fullName>OtherState__c</fullName>
    <externalDeveloperName>OtherState</externalDeveloperName>
    <label>State</label>
    <length>80</length>
    <type>Text</type>
</CustomField>