News UAT/force-app/main/default/objects/Contact__x/fields/OwnerId__c.field-meta.xml
<CustomField>
    <fullName>OwnerId__c</fullName>
    <externalDeveloperName>OwnerId</externalDeveloperName>
    <label>Owner ID</label>
    <length>18</length>
    <referenceTo>User__x</referenceTo>
    <relationshipLabel>NRM Contacts</relationshipLabel>
    <relationshipName>NRM_Contacts2</relationshipName>
    <type>ExternalLookup</type>
</CustomField>