News UAT/force-app/main/default/objects/Contact__x/fields/Partner_s_Name_c__c.field-meta.xml
<CustomField>
    <fullName>Partner_s_Name_c__c</fullName>
    <externalDeveloperName>Partner_s_Name__c</externalDeveloperName>
    <label>Partner&#39;s Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>