News UAT/force-app/main/default/objects/Contact__x/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <externalDeveloperName>Phone</externalDeveloperName>
    <label>Business Phone</label>
    <type>Phone</type>
</CustomField>