News UAT/force-app/main/default/objects/Contact__x/fields/Post_Only_c__c.field-meta.xml
<CustomField>
    <fullName>Post_Only_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>Post_Only__c</externalDeveloperName>
    <label>Post Only</label>
    <type>Checkbox</type>
</CustomField>