News UAT/force-app/main/default/objects/Contact__x/fields/Preferred_Name_c__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Name_c__c</fullName>
    <externalDeveloperName>Preferred_Name__c</externalDeveloperName>
    <label>Preferred Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>